# TFLEX

./: .gitignore  ComplexQueryData.py  ComplexTemporalQueryData.py  ComplexTemporalQueryDataloader.py  LICENSE  README.md  TCQE_static_QE.py  create_queries.py  dataloader.py  discrete.py  generate_queries.py  interpreter.py  log_wandb.py  main_TCQE_TFLEX.py  requirements.txt  run_meta.py  run_migration_QE_to_TQE.py  run_patch.py  run_reasoning_interpreter.py  run_sampling_TCQs.py  sampling_CQE.py  sampling_CQE_GDELT.py  sampling_interpreter.py  test.py  test_LaTeX.py  test_dataloader.py  test_network.py  test_run.py  train_CQE_CQD.py  train_CQE_ConE.py  train_CQE_FLEX.py  train_CQE_FLEX_2F.py  train_CQE_FLEX_2F_MLP_I2.py  train_CQE_FLEX_ConvE.py  train_CQE_FLEX_Infty.py  train_CQE_FLEX_IntersectionLukasiewicz.py  train_CQE_FLEX_IntersectionMin.py  train_CQE_FLEX_NegationByMLP.py  train_CQE_FLEX_Proj.py  train_CQE_FLEX_dist.py  (+36 more)
assistance/: MANIFEST.in  README.md  mkdocs.yml  requirements-web.txt  requirements.txt  setup.cfg  setup.py
assistance/docs/: CheetSheet.md  index.md  requirements-docs.txt
assistance/toolbox/: __init__.py  __main__.py  main.py
assistance/toolbox/commands/: cli_clean.py  cli_visualize.py  command_template.py
assistance/toolbox/data/: ComplementaryDataset.py  DataSchema.py  DatasetSchema.py  InductiveDataset.py  LinkPredictDataset.py  PyG_extension.py  ScoringAllDataset.py
assistance/toolbox/evaluate/: EntityAlignment.py  Leaderboard.py  LinkPredict.py  __init__.py
assistance/toolbox/exp/: DistributeSchema.py  Experiment.py  Notebook.py  (+1 more)
(+385 files in other folders)
