[metadata]
name = toolbox
version = attr: toolbox.__version__
author =
author_email =
description = Ai Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LinXueyuanStdio/KGE-toolbox
project_urls =
    Bug Tracker = https://github.com/LinXueyuanStdio/KGE-toolbox/issues
license = GPLv3
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment


[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    toolbox = toolbox.main:main

[flake8]
# Default from https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-ignore
# minus E226
ignore = E121,E123,E126,E24,E704,W503,W504
max-line-length = 100
max-complexity = 12
exclude =
    .git,
    __pycache__,
    .eggs,
    user_data,
